2008-03-07  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.13.6 release.
	* download.html: Ditto.

2008-02-02  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.13.5 release.
	* download.html: Ditto, and clear out 0.11.x releases.

2008-02-02  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.13.4 release.
	* download.html: Ditto.

2008-01-26  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* download.html: Added links to installation instructions.

2008-01-25  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.13.3 release.
	* download.html: Ditto, and added Windows/Mac section

2008-12-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.12.2 release.
	* download.html: Ditto.

2008-09-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Linkify "Tasque".

2008-09-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.12.0 release.
	* download.html: Ditto.

2008-08-21  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.3 release.
	* download.html: Ditto.

2008-08-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.2 release.
	* download.html: Ditto.

2008-08-04  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.1 release, removed old cruft.
	* download.html: Ditto.

2008-05-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.0 release.
	* download.html: Ditto.

2008-03-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.10.0 release.
	* download.html: Ditto.

2008-03-03  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.9.8 release.
	* download.html: Ditto.

2008-01-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.9.4 release.
	* download.html: Ditto.
