@@ -71,6 +71,23 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>April 18, 2009</h3>
+   	      <b>Stable</b> version 0.14.1 released!  New features since previous stable
+   	      series include:
+   	      <ul>
+   	        <li>Tomboy is now fully supported on Windows and Mac OS X</li>
+   	        <li>Printing has been rewritten using the Gtk.Print API, fixing many bugs</li>
+   	        <li>25% reduction in memory usage and slightly faster startup</li>
+   	        <li>Significant memory savings with very large note collections</li>
+   	        <li>Improvements to HTML Export add-in</li>
+   	        <li>Improvements in note and URL linking</li>
+   	        <li>Many fixes to note synchronization and D-Bus API</li>
+   	        <li>Process now named "tomboy", not "Tomboy"</li>
+   	        <li>No longer writes to disk every 40 seconds</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_14_1/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>March 7, 2009</h3>
    	      <b>Unstable</b> version 0.13.6 released!  New features since
    	      version 0.13.5 include:
