@@ -1,3 +1,8 @@
+2008-04-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.14.1 release.
+	* download.html: Ditto, with some reorganization.
+
 2008-03-07  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.13.6 release.
